--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,13 @@ dependencies:
   shared_preferences: ^2.0.12
   buildcondition: ^0.0.4
   motion_toast: ^2.1.1
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^1.0.0
 
 flutter_icons:
   android: true
@@ -58,7 +60,7 @@ flutter_icons:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
